--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 			</h2>
             <div class="post-body bordered-bottom">
 				<p class = "lead light small">
-				If this is your first visit here, you might first want to read the pages
-				that are listed in the menu, activated by the upper left menu-icon. 
-				But if you're in a hurry, here's the short version: this site is about me and 
-				my cycling project, an attempt to set the WRRA hour record. I'm a fool with a history
-				of two strokes and I'm convinced that recumbent bikes can save lives.
+				This site is about [my cycling project}(project), an attempt to set the WRRA hour record. [I'm](about) a 
+				cyclist with a medical history of two strokes and I'm convinced that *you* should take care of 
+				your blood pressure - because hypertension is the number one cause for strokes - and that 
+				recumbent bikes can save lives.
 				</p>
 				<p class = "lead light small">
 					Below you'll find links to the latest postings in the blog section of this site.
