--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 				Welcome
 			</h2>
             <div class="post-body bordered-bottom">
-				<p class = "lead light small">
-				This site is about [my cycling project}(project), an attempt to set the WRRA hour record. [I'm](about) a 
-				cyclist with a medical history of two strokes and I'm convinced that *you* should take care of 
-				your blood pressure - because hypertension is the number one cause for strokes - and that 
-				recumbent bikes can save lives.
+				<p class="lead light">
+				This site is about <a href="/project">my cycling project</a>, an attempt to set the WRRA hour record. 
+				<a href="/about">I'm</a> a 
+				cyclist with a medical history of two strokes. I want to raise awareness of the silent killer,
+				high blood pressure - hypertension. It is the number one cause for <a href="/stroke">strokes</a>.
 				</p>
 				<p class = "lead light small">
 					Below you'll find links to the latest postings in the blog section of this site.
