Som content changes and fixed link style issue.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 				<p class="lead light">
 				This site is about <a href="/project">my cycling project</a>, an attempt to set the WRRA hour record. 
 				<a href="/about">I'm</a> a 
-				cyclist with a medical history of two strokes. I want to raise awareness of the silent killer,
+				cyclist with a medical history of two strokes and I want to raise awareness of the silent killer,
 				high blood pressure - hypertension. It is the number one cause for <a href="/stroke">strokes</a>.
 				</p>
 				<p class = "lead light small">
