Content grammar fixes.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 			</h2>
             <div class="post-body bordered-bottom">
 				<p class="lead light">
-				This site is about <a href="/project">my cycling project</a>, an attempt to set the WRRA hour record. 
+				This site is about <a href="/project">my cycling project</a>, an attempt to set the WRRA (World Recumbent Racing Association) hour record. 
 				<a href="/about">I'm</a> a 
 				cyclist with a medical history of two strokes and I want to raise awareness of the silent killer,
 				high blood pressure - hypertension. It is the number one cause for <a href="/stroke">strokes</a>.
 				</p>
 				<p class = "lead light small">
+					Look to the top left of the screen: there's a black MENU button, it's for navigation in this site. 
 					Below you'll find links to the latest postings in the blog section of this site.
 				</p>
 			</div>
