--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 			</h2>
             <div class="post-body bordered-bottom">
 				<p class="lead light">
-				This site is about <a href="/project">my cycling project</a>, an attempt to set the WRRA (World Recumbent Racing Association) hour record. 
+				This site is about <a href="/project">a cycling project</a>, my attempt to set the WRRA (World Recumbent Racing Association) hour record. 
 				<a href="/about">I'm</a> a 
 				cyclist with a medical history of two strokes and I want to raise awareness of the silent killer,
 				high blood pressure - hypertension. It is the number one cause for <a href="/stroke">strokes</a>.
