--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: Latest Posts
 description: "Deterministic chaos"
-headline: Better to get up and try
+headline: Better get up and ride
 tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 ---
 <div class="row">
@@ -17,6 +17,7 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 				<a href="/about">I'm</a> a 
 				cyclist with a medical history of two strokes and I want to raise awareness of the silent killer,
 				high blood pressure - hypertension. It is the number one cause for <a href="/stroke">strokes</a>.
+				So better keep moving, keep riding!
 				</p>
 				<p class = "lead light small">
 					Look to the top left of the screen: there's a black MENU button, it's for navigation in this site. 
