Modified navigation menu layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ tags: [Heimonen, Recumbent, Recumbents, WRRA, Tadpole trike]
 				So better keep moving, keep riding!
 				</p>
 				<p class = "lead light small">
-					Look to the top left of the screen: there's a black MENU button, it's for navigation in this site. 
-					Below you'll find links to the latest postings in the blog section of this site.
+					Below you'll find links and short excerpts of the latest postings in the blog section.
 				</p>
 			</div>
 		</header>
